[package]
authors = ["panicbit <panicbit.dev@gmail.com>"]
name = "rfi"
version = "0.1.0"

[dependencies]
dotenv = "0.10.1"
error-chain = "0.11.0"
git2 = "0.6.8"
lazy_static = "0.2.9"
matches = "0.1.6"
pulldown-cmark = "0.1.0"
regex = "0.2.2"
reqwest = "0.8.0"
serde = "1.0.16"
serde_derive = "1.0.16"
serde_json = "1.0.4"
term-painter = "0.2.4"
